fix: more system simplifications
